--- a/index.html
+++ b/index.html
@@ -5,4 +5,4 @@
     src="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFU-_Sx_qI&#x2F;YBRgI4pr0qHsBzqjcW6sZQ&#x2F;view?embed" allowfullscreen="allowfullscreen" allow="fullscreen">
   </iframe>
 </div>
-<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFU-_Sx_qI&#x2F;YBRgI4pr0qHsBzqjcW6sZQ&#x2F;view?utm_content=DAFU-_Sx_qI&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">Curriculum Vitae mujer moderno y profesional con iconos gris y blanco</a> de CRISTIAN UBALDE JANCCO
+<a href="https:&#x2F;&#x2F;www.canva.com&#x2F;design&#x2F;DAFU-_Sx_qI&#x2F;YBRgI4pr0qHsBzqjcW6sZQ&#x2F;view?utm_content=DAFU-_Sx_qI&amp;utm_campaign=designshare&amp;utm_medium=embeds&amp;utm_source=link" target="_blank" rel="noopener">CV</a> de CRISTIAN UBALDE JANCCO
